--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,17 @@ default = []
 bsp_rpi3 = []
 bsp_rpi4 = []
 bsp_rpi5 = []
+all = ["bsp_rpi3", "bsp_rpi4", "bsp_rpi5"]
 
 [[bin]]
 name = "kernel"
 path = "src/main.rs"
+test = false
+doctest = false
+bench = false
 
 [dependencies]
+
+# Platform specific dependencies
+[target.'cfg(target_arch = "aarch64")'.dependencies]
+aarch64-cpu = { version = "10" }
