--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -34,6 +34,12 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
+      - name: Add redirect
+        run: echo '<meta http-equiv="refresh" content="0;url=aoc/index.html">' > target/aarch64-unknown-none-softfloat/doc/kernel/index.html
+
+      - name: Remove lock file
+        run: rm target/aarch64-unknown-none-softfloat/doc/.lock
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
