--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -29,7 +29,7 @@ jobs:
         uses: DeterminateSystems/magic-nix-cache-action@main
 
       - name: Build website
-        run: nix develop --command -- make doc
+        run: nix develop --command -- make doc-gh
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
