--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
-      - name: Add redirect
-        run: echo '<meta http-equiv="refresh" content="0;url=/index.html">' > target/aarch64-unknown-none-softfloat/doc/kernel/index.html
+      - name: Add redirect (change later to /index.html when we move to subdomain)
+        run: echo '<meta http-equiv="refresh" content="0;url=/sark/index.html">' > target/aarch6 4-unknown-none-softfloat/doc/kernel/index.html
 
       - name: Remove lock file
         run: rm target/aarch64-unknown-none-softfloat/doc/.lock
