--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -34,8 +34,11 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
+      - name: Copy index.html to root
+        run: cp ./target/aarch64-unknown-none-softfloat/doc/kernel/index.html ./target/aarch64-unknown-none-softfloat/doc/index.html
+
       - name: Add redirect (change later to /index.html when we move to subdomain)
-        run: echo '<meta http-equiv="refresh" content="0;url=/sark/kernel/index.html">' > target/aarch6 4-unknown-none-softfloat/doc/index.html
+        run: echo '<meta http-equiv="refresh" content="0;url=/sark/kernel/">' > target/aarch6 4-unknown-none-softfloat/doc/index.html
 
       - name: Remove lock file
         run: rm target/aarch64-unknown-none-softfloat/doc/.lock
