--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,10 +1,10 @@
 name: Publish Dev Container
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  schedule:
+    - cron: '0 0 * * *'
+  workflow_dispatch:
+
 
 env:
   REGISTRY: ghcr.io
